--- a/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
+++ b/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
@@ -10,7 +10,7 @@
 <h1>@Name at @Price €</h1>
 
 <PriceChart Name="@Name" pricesList="priceList" @ref="priceChart" TimeRangeChanged="OnTimeRangeChanged" _timeRangeInDays="lastSelectedDays"/>
-<NotificationModal Name="@Name" />
+<NotificationModal Name="@Name" CurrentPrice="@Price"/>
 
 @code {
     [Parameter] public string Name { get; set; }
