fix: now on startup of cryptocurrency page the pricechart will load. now the switch interval days will work immediantly after clicking the button. codechanges: now the pricemodal doesnt get sent a pricelist as a parameter instead a method updateChart will send the updated pricelist to the component.

--- a/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
+++ b/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
@@ -10,7 +10,7 @@
 
 <h1>@Name at @Price €</h1>
 
-<PriceChart Name="@Name" pricesList="priceList" @ref="priceChart" TimeRangeChanged="OnTimeRangeChanged" _timeRangeInDays="lastSelectedDays"/>
+<PriceChart Name="@Name" @ref="priceChart" TimeRangeChanged="OnTimeRangeChanged" _timeRangeInDays="lastSelectedDays"/>
 <NotificationModal Name="@Name" CurrentPrice="@Price"/>
 
 @code {
@@ -46,7 +46,7 @@
 
         await hubConnection.StartAsync();
 
-        await priceChart.UpdateChart();
+        await priceChart.UpdateChart(priceList);
         StateHasChanged();
     }
 
@@ -54,7 +54,7 @@
     {
         lastSelectedDays = days;
         priceList = await dataFetcherService.FetchPriceOfLastXDays(Name, days);
-        await priceChart.UpdateChart();
+        await priceChart.UpdateChart(priceList);
         StateHasChanged();
     }
 
