--- a/code/WebApp/WebApp/Components/Layout/NavMenu.razor
+++ b/code/WebApp/WebApp/Components/Layout/NavMenu.razor
@@ -1,32 +1,33 @@
-﻿<nav class="navbar navbar-expand-lg navbardark bg-dark">
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex justify-content-center align-items-center" href="" >
+        <a class="navbar-brand d-flex justify-content-center align-items-center" href="">
             <img src="/IeCAG_Logo_Lang.png" alt="Logo" height="30" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <NavLink class="nav-link" Match="NavLinkMatch.All" href="">Cryptocurrencies</NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/wallet">Wallet</NavLink>
                 </li>
-
+            </ul>
+            <ul class="navbar-nav ms-auto">
                 <AuthorizeView>
                     <NotAuthorized>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/login">Login</NavLink>
+                            <NavLink class="btn btn-outline-light me-2" href="/login">Login</NavLink>
                         </li>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/register">Register</NavLink>
+                            <NavLink class="btn btn-outline-light" href="/register">Register</NavLink>
                         </li>
                     </NotAuthorized>
                     <Authorized>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/logout">Logout</NavLink>
+                            <NavLink class="btn btn-warning" href="/logout">Logout</NavLink>
                         </li>
                     </Authorized>
                 </AuthorizeView>
@@ -34,4 +35,3 @@
         </div>
     </div>
 </nav>
-
