fix: now the Websocket works again and new price data will be uploaded fix: now datetime will be set to the local datetime of the server.

--- a/code/WebApp/WebApp/Components/App.razor
+++ b/code/WebApp/WebApp/Components/App.razor
@@ -32,6 +32,11 @@
             }
         }
     </script>
+    <script>
+        window.getUserTimeZone = function () {
+            return Intl.DateTimeFormat().resolvedOptions().timeZone;
+        }
+    </script>
 </body>
 
 </html>
