--- a/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
+++ b/code/WebApp/WebApp/Components/Pages/Cryptocurrency.razor
@@ -38,7 +38,7 @@
             {
                 if (name == Name)
                 {
-                    await priceChart.UpdateChart(DateTime.Now, price);
+                    await priceChart.UpdateChart(DateTimeOffset.Now.LocalDateTime, price);
                     Price = price;
                     InvokeAsync(StateHasChanged);
                 }
